--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                 <a href="#gallery">Gallery</a>
                 <a href="#blog">Blog</a>
                 <a href="#contact">Contact</a>
+                <img src="moon.png" id="mode">
             </ul>
         </nav>
     </header>
@@ -98,5 +99,8 @@
             </div>
         </section>
     </footer>
+
+<script src="script.js"></script>
+
 </body>
 </html>
